// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api projects should create a project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "Project",
      "metadata": {
        "annotations": {
          "billing.gardener.cloud/costObject": "8888888888",
        },
        "name": "xyz",
        "resourceVersion": undefined,
      },
      "spec": {
        "createdBy": {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "foo@example.org",
        },
        "description": "description",
        "namespace": "garden-xyz",
        "owner": undefined,
        "purpose": "purpose",
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects?watch=true&fieldSelector=metadata.name%3Dxyz",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api projects should create a project 2`] = `
{
  "data": {
    "createdBy": "foo@example.org",
    "description": "description",
    "owner": "foo@example.org",
    "phase": "Ready",
    "purpose": "purpose",
  },
  "metadata": {
    "annotations": {
      "billing.gardener.cloud/costObject": "8888888888",
    },
    "name": "xyz",
    "namespace": "garden-xyz",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should delete a project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/bar",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    {
      "metadata": {
        "annotations": {
          "confirmation.gardener.cloud/deletion": "true",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/bar",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
  ],
]
`;

exports[`api projects should delete a project 2`] = `
{
  "data": {
    "createdBy": "foo@example.org",
    "description": "bar-description",
    "owner": "bar@example.org",
    "phase": "Ready",
    "purpose": "bar-purpose",
  },
  "metadata": {
    "annotations": {
      "confirmation.gardener.cloud/deletion": "true",
    },
    "name": "bar",
    "namespace": "garden-bar",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should patch a project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "description": "foobar",
      },
    },
  ],
]
`;

exports[`api projects should patch a project 2`] = `
{
  "data": {
    "createdBy": "foo@example.org",
    "description": "foobar",
    "owner": "bar@example.org",
    "phase": "Ready",
    "purpose": "foo-purpose",
  },
  "metadata": {
    "annotations": {
      "billing.gardener.cloud/costObject": "9999999999",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should reject request with authorization error 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhekBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.FjCv0aM0u5SpfHVemW_p-HnVVyr7Vg53ul5ukPSbNbA",
    },
  ],
]
`;

exports[`api projects should reject request with authorization error 2`] = `
{
  "code": 403,
  "details": Any<Object>,
  "message": "Forbidden",
  "reason": "Forbidden",
  "status": "Failure",
}
`;

exports[`api projects should return all projects 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InByb2plY3RzLXZpZXdlckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.mdL_IwTCaUnb2Yzua4Z54bS85BXKeAU3O1ioUfs7MeI",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "resource": "projects",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api projects should return all projects 2`] = `
[
  {
    "data": {
      "createdBy": "admin@example.org",
      "owner": "admin@example.org",
      "phase": "Ready",
    },
    "metadata": {
      "name": "garden",
      "namespace": "garden",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "foo@example.org",
      "description": "foo-description",
      "owner": "bar@example.org",
      "phase": "Ready",
      "purpose": "foo-purpose",
    },
    "metadata": {
      "annotations": {
        "billing.gardener.cloud/costObject": "9999999999",
      },
      "name": "foo",
      "namespace": "garden-foo",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "foo@example.org",
      "description": "bar-description",
      "owner": "bar@example.org",
      "phase": "Ready",
      "purpose": "bar-purpose",
    },
    "metadata": {
      "name": "bar",
      "namespace": "garden-bar",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
      "phase": "Ready",
    },
    "metadata": {
      "name": "GroupMember1",
      "namespace": "garden-GroupMember1",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
      "phase": "Ready",
    },
    "metadata": {
      "name": "GroupMember2",
      "namespace": "garden-GroupMember2",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "admin@example.org",
      "description": "secret-description",
      "owner": "admin@example.org",
      "phase": "Ready",
      "purpose": "secret-purpose",
    },
    "metadata": {
      "name": "secret",
      "namespace": "garden-secret",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "admin@example.org",
      "description": "trial-description",
      "owner": "admin@example.org",
      "phase": "Failed",
      "purpose": "trial-purpose",
    },
    "metadata": {
      "annotations": {
        "billing.gardener.cloud/costObject": "1234567890",
      },
      "name": "trial",
      "namespace": "garden-trial",
      "resourceVersion": "42",
      "role": "project",
    },
  },
]
`;

exports[`api projects should return the foo project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
  ],
]
`;

exports[`api projects should return the foo project 2`] = `
{
  "data": {
    "createdBy": "foo@example.org",
    "description": "foo-description",
    "owner": "bar@example.org",
    "phase": "Ready",
    "purpose": "foo-purpose",
  },
  "metadata": {
    "annotations": {
      "billing.gardener.cloud/costObject": "9999999999",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "42",
    "role": "project",
  },
}
`;

exports[`api projects should return three projects 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "resource": "projects",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api projects should return three projects 2`] = `
[
  {
    "data": {
      "createdBy": "foo@example.org",
      "description": "foo-description",
      "owner": "bar@example.org",
      "phase": "Ready",
      "purpose": "foo-purpose",
    },
    "metadata": {
      "annotations": {
        "billing.gardener.cloud/costObject": "9999999999",
      },
      "name": "foo",
      "namespace": "garden-foo",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "foo@example.org",
      "description": "bar-description",
      "owner": "bar@example.org",
      "phase": "Ready",
      "purpose": "bar-purpose",
    },
    "metadata": {
      "name": "bar",
      "namespace": "garden-bar",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  {
    "data": {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
      "phase": "Ready",
    },
    "metadata": {
      "name": "GroupMember1",
      "namespace": "garden-GroupMember1",
      "resourceVersion": "42",
      "role": "project",
    },
  },
]
`;

exports[`api projects should timeout when creating a project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "Project",
      "metadata": {
        "annotations": {
          "billing.gardener.cloud/costObject": "8888888888",
        },
        "name": "my-project",
        "resourceVersion": undefined,
      },
      "spec": {
        "createdBy": {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "foo@example.org",
        },
        "description": "description",
        "namespace": "garden-my-project",
        "owner": undefined,
        "purpose": "purpose",
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects?watch=true&fieldSelector=metadata.name%3Dmy-project",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api projects should timeout when creating a project 2`] = `
{
  "code": 504,
  "details": Any<Object>,
  "message": "The condition for "projects" was not met within 10 ms",
  "reason": "Gateway Timeout",
  "status": "Failure",
}
`;

exports[`api projects should update a project 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    {
      "metadata": {
        "annotations": {
          "billing.gardener.cloud/costObject": "8888888888",
        },
      },
      "spec": {
        "description": "description",
        "owner": {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "baz@example.org",
        },
        "purpose": "purpose",
      },
    },
  ],
]
`;

exports[`api projects should update a project 2`] = `
{
  "data": {
    "createdBy": "foo@example.org",
    "description": "description",
    "owner": "baz@example.org",
    "phase": "Ready",
    "purpose": "purpose",
  },
  "metadata": {
    "annotations": {
      "billing.gardener.cloud/costObject": "8888888888",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;
